--- a/ToDo.html
+++ b/ToDo.html
@@ -6,10 +6,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="ToDo.css" />
 </head>
 
 <body>
+    <div id="myDIV" class="header">
+        <h2>Мой список дел</h2>
+        <input type="text" id="myInput" placeholder="Название...">
+        <button onclick="newElement()" class="add">Add</button>
 
-</body>
+    </div>
+
+    <ul id="myUL">
+
+    </ul>
+    <div>
+        <button class=" all ">All</button>
+        <button class="completed ">Completed</button>
+        <button class="inProgress ">In Progress</button>
+        <button class="delete ">Delete</button>
+    </div>
+
+    <script src="./ToDo.js "></script>
 
 </html>
